--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Kukka-Kimppula",
+  "name": "Valkeakoskella Kenraalintorilla sijaitseva täyden palvelun kukkamyymälä.",
   "icons": [
     {
       "src": "favicon.ico",
