--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,9 +5,14 @@
   "description": "Valkeakoskella Kenraalintorilla sijaitseva täyden palvelun kukkamyymälä.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "97x97",
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
